welcome.lessons.welcome.conditions.Conditions.scala.code
buggle==0
if (estFaceMur=true ){
  recule();
  buggle==buggle+1
} else {
  avance();
  buggle==buggle+1
}